# hh

./: .env  .gitignore  db.sqlite3  local.yml  production.yml  pyproject.toml  requirements.txt
administration/: admin.py  models.py  urls.py  views.py
administration/migrations/: 0001_initial.py  0002_alter_logo_image_file.py  0003_logo_svg_file_alter_logo_image_file.py  0004_alter_logo_image_file_alter_logo_svg_file.py  0005_imprint_privacypolicy.py  0006_alter_logo_image_file_alter_logo_svg_file.py  0007_alter_logo_image_file_alter_logo_svg_file.py
articles/: admin.py  models.py  urls.py  views.py
articles/migrations/: 0001_initial.py  0002_rename_content_article.py  0003_article_main_article.py  0004_articletemplate_alter_article_category_and_more.py  0005_category_sites.py  0006_remove_article_main_article_articleimage.py  0007_alter_article_category.py  0008_alter_articleimage_article.py  0009_alter_article_content.py
compose/django/: Dockerfile  Dockerfile-dev  entrypoint.sh  gunicorn.sh  start-dev.sh
compose/nginx/: Dockerfile  Dockerfile-dev  _.huh-rostock.de_private_key.key  huh-rostock.de_private_key.key   huh-rostock.de_ssl_certificate.cer  nginx-dev.conf  nginx.conf
hh/: settings.py  urls.py
index/: admin.py  models.py  views.py
index/migrations/: 0001_initial.py  0002_indexheader_indextext_teaser.py  0003_alter_teaser_image_file.py  0004_teasericon_alter_teaser_image_file.py  0005_alter_teaser_image_file_alter_teasericon_svg.py  0006_indexcard_delete_indextext.py  (+3 more)
news/: admin.py  models.py  urls.py  views.py
static/css/: animation.css  (+3 more)
(+20 files in other folders)
